--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ a{
 
 }
 
-.gradient_text{
+.gradient__text{
     background: var(--gradient-text);
     background-clip: text;
     -webkit-background-clip: text;
