--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,20 +36,28 @@
 .gpt3__navbar-links_container p, 
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p{
-    color:white;
+    color: white;
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 18px;
     line-height: 25px;
     text-transform: capitalize;
-
     margin: 0 1rem;
     cursor: pointer;
+    
+    transition: transform 0.3s ease, box-shadow 0.3s ease
 
 }
 
+.gpt3__navbar-links_container p:hover, 
+.gpt3__navbar-sign p:hover,
+.gpt3__navbar-menu_container p:hover {
+    transform: scale(1.3);
+    color: var(--color-subtext);
+}
+
 .gpt3__navbar-sign button,
-.gpt3__navbar-menu_container button{
+.gpt3__navbar-menu_container button {
     padding: 1rem 2rem;
     color: white;
     font-family: var(--font-family);
@@ -59,15 +67,15 @@
     background: #FF4820;
     border-radius: 5px; 
     border: 0;
-    outline:none;
+    outline: none;
     cursor: pointer;
+    transition: transform 0.3s ease;
 }
 
-.gpt3__navbar-menu{
-    margin-left: 1rem;
-
-    display: none;
-    position: relative;
+.gpt3__navbar-sign button:hover,
+.gpt3__navbar-menu_container button:hover {
+    background: var(--color-footer);
+    transform: scale(1.1);
 }
 
 .gpt3__navbar-menu svg{
