--- a/src/container/header/header.css
+++ b/src/container/header/header.css
@@ -1,46 +1,64 @@
-.gpt3__header{
+@keyframes slideInLeft {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+  @keyframes slideInRight {
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+  
+  .gpt3__header {
     display: flex;
-}
-.gpt3__header-content{
+  }
+  
+  .gpt3__header-content {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-
     margin-right: 5rem;
-}
-
-
-.gpt3__header-content h1{
+    animation: slideInLeft 2s ease-out;
+  }
+  
+  .gpt3__header-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 62px;
     line-height: 75px;
     letter-spacing: -0.04em;
-
-}
-
-.gpt3__header-content p{
+  }
+  
+  .gpt3__header-content p {
     font-family: var(--font-family);
-font-size: 20px;
-font-weight:normal;
-line-height: 27.32px;
-text-align: left;
-color: var(--color-text);
-margin-top: 1.5rem;
-
-}
-
-.gpt3__header-content_input{
+    font-size: 20px;
+    font-weight: normal;
+    line-height: 27.32px;
+    text-align: left;
+    color: var(--color-text);
+    margin-top: 1.5rem;
+  }
+  
+  .gpt3__header-content_input {
     width: 100%;
     margin: 2rem 0 1rem;
-
     display: flex;
-    
-}
-
-.gpt3__header-content_input input{
+  }
+  
+  .gpt3__header-content_input input {
     flex: 2;
     width: 100%;
     min-height: 50px;
@@ -56,10 +74,9 @@ margin-top: 1.5rem;
     color: white;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-}
-
-
-.gpt3__header-content_input button{
+  }
+  
+  .gpt3__header-content_input button {
     flex: 0.6;
     width: 100%;
     min-height: 50px;
@@ -76,22 +93,22 @@ margin-top: 1.5rem;
     border: none;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-}
-
-.gpt3__header-content__people{
+  }
+  
+  .gpt3__header-content__people {
     width: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     margin-top: 2rem;
-}
-
-.gpt3__header-content__people img{
+  }
+  
+  .gpt3__header-content__people img {
     width: 181.79px;
     height: 38px;
-}
-
-.gpt3__header-content__people p{
+  }
+  
+  .gpt3__header-content__people p {
     margin: 0 0 0 1rem;
     font-family: var(--font-family);
     font-weight: 500;
@@ -99,68 +116,67 @@ margin-top: 1.5rem;
     line-height: 38px;
     color: #FFFFFF;
     text-align: center;
-}
-
-.gpt3__header-image{
+  }
+  
+  .gpt3__header-image {
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
-
-.gpt3__header-image img{
+    animation: slideInRight 2s ease-out;
+  }
+  
+  .gpt3__header-image img {
     width: 100%;
     height: 100%;
-}
-
-@media screen and (max-width: 1050px){
-    .gpt3__header{
-        flex-direction: column;
+  }
+  
+  @media screen and (max-width: 1050px) {
+    .gpt3__header {
+      flex-direction: column;
     }
-    .gpt3__header-content{
-        margin: 0 0 3rem;
+    .gpt3__header-content {
+      margin: 0 0 3rem;
     }
-    
-}
-
-@media screen and (max-width: 650px){
+  }
+  
+  @media screen and (max-width: 650px) {
     .gpt3__header-content h1 {
-        font-size: 48px;
-        line-height: 60px;
+      font-size: 48px;
+      line-height: 60px;
     }
-    .gpt3__header-content p{
-        font-size: 16px;
-        line-height: 24px;
+    .gpt3__header-content p {
+      font-size: 16px;
+      line-height: 24px;
     }
-
-    .gpt3__header-content__people{
-        flex-direction: column;
+  
+    .gpt3__header-content__people {
+      flex-direction: column;
     }
-    .gpt3__header-content__people p{
-        margin: 0;
+    .gpt3__header-content__people p {
+      margin: 0;
     }
     .gpt3__header-content_input input,
     .gpt3__header-content_input button {
-        font-size: 16px;
-        line-height: 24px;
+      font-size: 16px;
+      line-height: 24px;
     }
-    
-}
-
-@media screen and (max-width: 490px){
+  }
+  
+  @media screen and (max-width: 490px) {
     .gpt3__header-content h1 {
-        font-size: 36px;
-        line-height: 48px;
+      font-size: 36px;
+      line-height: 48px;
     }
-    .gpt3__header-content p{
-        font-size: 14px;
-        line-height: 24px;
+    .gpt3__header-content p {
+      font-size: 14px;
+      line-height: 24px;
     }
-
+  
     .gpt3__header-content_input input,
     .gpt3__header-content_input button {
-        font-size: 12px;
-        line-height: 16px;
+      font-size: 12px;
+      line-height: 16px;
     }
-}
+  }
+  
