--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -80,23 +80,27 @@
 
 .gpt3__navbar-menu svg{
     cursor: pointer;
+    display: none;
 }
 
 .gpt3__navbar-menu_container{
+
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     flex-direction: column;
     text-align: end;
     background: var(--color-footer);
-    padding: 2rem;
+    padding: 3rem;
     position: absolute;
     top: 40px;
     right: 0;
-    margin-top: 1rem;
-    min-width:210px ;
+    margin-top: 4rem;
+    margin-right: 2rem;
+    min-width: 210px;
     border-radius: 5px;
     box-shadow: 0 0 5 rgba(0, 0, 0, 0.2);
+    
 }
 
 .gpt3__navbar-menu_container p{
@@ -115,6 +119,11 @@
 
     .gpt3__navbar-menu{
         display: flex;
+    }
+    .gpt3__navbar-menu svg{
+        cursor: pointer;
+        display: flex;
+       margin: 13px ;
     }
 }
 
